# Asagi

./: .gitignore  LICENSE  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.test.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  codex-schema-watch.yml
codex-schema/: README.md
docs/: accessibility.md  architecture.md  commands.md  dev-setup.md  keybindings.md  troubleshooting.md
e2e/: chat-streaming-no-duplicate.spec.ts  codex-mock-flow.spec.ts  codex-real-flow.spec.ts  regression-clean-11-12.spec.ts  ux-sidebar-rules.spec.ts  ux-sidebar-tabs.spec.ts  ux-traybar.spec.ts  welcome.spec.ts
e2e/helpers/: real-mode.ts
public/: .gitkeep
scripts/: asagi-diagnostic-bundle.ps1  codex-schema-snapshot.mjs  lint-execute-batch.ps1  lint-execute-batch.sh  smoke-m2-qw.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: auth.rs  codex_sidecar.rs  db.rs  image_paste.rs  jobobject.rs  lib.rs  main.rs  message.rs  multi_sidecar.rs  project.rs  session.rs  settings.rs
src-tauri/src/codex_sidecar/: auth.rs  auth_watchdog.rs  bin_resolver.rs  contract.rs  mock.rs  mock_server.rs  mod.rs  multi.rs  protocol.rs  real.rs  retry.rs
src-tauri/src/commands/: codex.rs  fs.rs  mod.rs
src-tauri/src/process/: jobobject.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/dev/codex-mock/: page.tsx
src/components/: error-boundary.tsx
src/components/chat/: auth-badge.tsx  chat-pane.tsx  chat-status-badge.tsx  codex-context.tsx  input-area.tsx  message-item.tsx  message-list.tsx  slash-palette.tsx  typing-indicator.tsx
src/components/command-palette/: command-items.ts  command-palette.tsx
src/components/help/: help-dialog.tsx
src/components/inspector/: inspector-pane.tsx  inspector.tsx  tab-context.tsx  tab-sub-agents.tsx  tab-todos.tsx
src/components/keybindings/: global-keybindings.tsx
src/components/layout/: app-shell.tsx  status-bar.tsx  title-bar.tsx  tray-bar.tsx
src/components/layout/__tests__/: tray-bar.test.tsx
src/components/project-rail/: add-project-button.tsx  project-icon.tsx  project-rail.tsx
src/components/providers/: intl-provider.tsx
src/components/settings/: settings-drawer.tsx
src/components/sidebar/: files-tab.tsx  new-session-button.tsx  rules-tab.tsx  runtime-tab.tsx  session-item.tsx  session-list.tsx  sessions-tab.tsx  sidebar.tsx
src/components/sidebar/__tests__/: rules-tab.test.tsx  sidebar.test.tsx
src/components/ui/: button.tsx
src/components/welcome/: step-brand.tsx  step-oauth.tsx  step-permissions.tsx  step-sample.tsx  wizard.tsx
src/components/welcome/__tests__/: wizard.test.tsx
src/lib/: keybindings.ts  logger.ts
src/lib/__tests__/: keybindings.test.ts
src/lib/codex/: deferred-shutdown.ts  schemas.ts  sidecar-client.ts  token-estimator.ts  use-auth-watchdog.ts  use-codex.ts  use-lazy-spawn.ts  use-spawn-retry.ts
src/lib/codex/__tests__/: deferred-shutdown.test.ts  token-estimator.test.ts  use-auth-watchdog.test.ts  use-lazy-spawn.test.ts  use-spawn-retry.test.ts
src/lib/i18n/: en.json  ja.json  request.ts
src/lib/stores/: chat-activity.ts  chat.ts  locale.ts  project.ts  session.ts  sidecar-mode.ts  ui.ts  welcome.ts
src/lib/stores/__tests__/: chat-activity.test.ts  chat.test.ts  locale.test.ts  project.test.ts  session.test.ts  sidecar-mode.test.ts
src/lib/tauri/: events.ts  invoke.ts  settings.ts  types.ts
src/lib/utils/: cn.ts
src/styles/: tokens.css
